--- a/akriic.html
+++ b/akriic.html
@@ -8,7 +8,8 @@
     <link rel="manifest" href="./manifest.json" crossorigin="use-credentials">
     <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css'>
     <link rel="stylesheet" href="css/ak.css">
-    <link rel="stylesheet" href="css/akelite.css">
+    <link rel="stylesheet" href="css/akriic.css">
+
     <link href='https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css' rel='stylesheet'>
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <script src='https://cdn.jsdelivr.net/npm/jquery@3.4.1/dist/jquery.min.js'></script>
