add multiple donation site support

--- a/akevolve.html
+++ b/akevolve.html
@@ -33,6 +33,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
     </nav>
+    <div id='acedonate'></div>
     <div style="padding-bottom:50px"></div>
 
     <button class="btn btn-sm ak-ontop-button" style="position:fixed;bottom:60px ;right: 0px;size:70px 70px;padding: 4px;z-index: 10000" id="btn-filter" type="button">Filter </button>
