--- a/akguide.html
+++ b/akguide.html
@@ -29,6 +29,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
         </nav>
+        <div id='acedonate'></div>
     <div style="padding-bottom:50px"></div>
         <div style="background:url('./img/chara/Croissant.png') center center no-repeat;"><iframe style="position: absolute; width:99.99% ;height: 90%; border: none" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSpeB-jafTJtiJuVaOk7IA0-w0U9kXTZ5LAAxBU43u09RdpHIyXPpWeXGMa8rIrpENHospk9jljfe_p/pubhtml?widget=true&amp"></iframe></div>
         Loading...
