--- a/akhrchars-old.html
+++ b/akhrchars-old.html
@@ -29,6 +29,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
     </nav>
+    <div id='acedonate'></div>
     <div style="padding-bottom:50px"></div>
     <div class="container" style="margin:auto;max-width:1000px;">
         <div class="col-12 alert alert-dark mt-3" role="alert">
