--- a/akhrcompare2.html
+++ b/akhrcompare2.html
@@ -45,6 +45,7 @@
                 <span class='navbar-toggler-icon'></span>
             </button>
     </nav>
+    <div id='acedonate'></div>
     <div class='contents'>
         <div class='row d-flex justify-content-center'>
             <div style='width: max-content;'>
