--- a/aklevel.html
+++ b/aklevel.html
@@ -30,6 +30,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
     </nav>
+    <div id='acedonate'></div>
     <div style="padding-bottom:50px"></div>
     <div class="container col-12" style="margin:auto; max-width: 1200px;">
     	<div class="row">
