--- a/akhrcompare.html
+++ b/akhrcompare.html
@@ -43,6 +43,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
     </nav>
+    <div id='acedonate'></div>
     <div style='padding-bottom:40px;'></div>
     <div class='row'>
         <div class="col-10 ak-shadow" style="max-width: 1000px; margin: 10px auto; display: block; background-color: #222;">
