--- a/akstage.html
+++ b/akstage.html
@@ -41,6 +41,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
     </nav>
+    <div id='acedonate'></div>
     <div style='padding-bottom:40px;'></div>
     <div id='stagechoosemodal' class='modal fade' role='dialog'>
         <div class='modal-dialog'>
