--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
     </nav>
+    <div id='acedonate'></div>
     <div style='padding-bottom:40px;'></div>
     <div class='row home-main'>
         <div class="col-12 home-sub1" style="display: block; margin: auto;">
