modify donation page

--- a/akhrchars.html
+++ b/akhrchars.html
@@ -594,8 +594,8 @@
     <div class="row" >
         <div class="col-12 ak-footer chara-footer-1" style="margin-top: 100px;">
             <div class="col-12 text-center" style="height: 50px">
-                <div style="vertical-align: middle;line-height: 30px;">Made by : Aceship and Faryzal2020</div>
-                <div style="vertical-align: middle;line-height: 20px;">With translate and data help from: dragonjet, Jetroyz and other on <a href="https://discord.gg/vJvAP8X" target="_blank">Rhodes island HQ discord server</a></div>
+                <div style="vertical-align: middle;line-height: 30px;">Developed and Maintained by: Aceship and Faryzal2020</div>
+                <div style="vertical-align: middle;line-height: 20px;">With translate and data help from: dragonjet, Jetroyz, AEsir and others on <a href="https://discord.gg/vJvAP8X" target="_blank">Rhodes island HQ discord server</a></div>
             </div>
         </div>
     </div>
