--- a/akhrcompare2.html
+++ b/akhrcompare2.html
@@ -180,6 +180,14 @@
             </div>
         </div> <!-- class='modal' -->
     </div> <!-- class='contents' -->
+    
+    <div class="row col-12 ak-footer">
+        <div class="col-12 text-center">
+            <div class="col-12 text-center"></div>
+            <p><a href="https://github.com/Aceship/AN-EN-Tags/issues">Bug Report and Suggestions</a></p>
+            <p>Developed and Maintained by: Aceship and Faryzal2020</p>
+        </div>
+    </div>
 </body>
 <script src='js/everpolate.min.js'></script>
 <script src='./js/aknav.js'></script>
