--- a/aklevel.html
+++ b/aklevel.html
@@ -165,14 +165,10 @@
     </div>
     <div class="row col-12 ak-footer">
         <div class="col-12 text-center">
-            <p>Forked from <a href = "https://graueneko.github.io/akhr.html">grauneko web</a></p>
+            <p>This module was originally forked from <a href = "https://graueneko.github.io/akhr.html">Graueneko web</a></p>
         <div class="col-12 text-center"></div>
-            <p>Last update: 12 May 2019, <a href="https://github.com/Aceship/AN-EN-Tags/issues">Contact</a></p>
-            <p>
-                Data source:
-                <a href="http://wiki.joyme.com/arknights/%E5%B9%B2%E5%91%98%E6%95%B0%E6%8D%AE%E8%A1%A8">Arknights Wiki (CN)</a>
-            </p>
-            <p>Powered by GraueNeko, Aceship, Faryzal2020</p>
+            <p><a href="https://github.com/Aceship/AN-EN-Tags/issues">Bug Report and Suggestions</a></p>
+            <p>Developed and Maintained by: Aceship and Faryzal2020</p>
         </div>
     </div>
     <script src='js/arrive.min.js'></script>
