--- a/akmatuses.html
+++ b/akmatuses.html
@@ -194,9 +194,12 @@
     <div class="row col-12 ak-footer">
         <div class="col-12 text-center">
         <div class="col-12 text-center"></div>
-            <p>Page Made by arthus</p>
-            <p>Aceship Faryzal2020</p>
-            <p>Site forked from grauneko </p>
+
+        <div class="col-12 text-center">
+            <p>This module is made by Arthus</p>
+        <div class="col-12 text-center"></div>
+            <p><a href="https://github.com/Aceship/AN-EN-Tags/issues">Bug Report and Suggestions</a></p>
+            <p>Website Developed and Maintained by: Aceship and Faryzal2020</p>
         </div>
     </div>
     <script src="./js/aknav.js"></script>
