some text adjustments

--- a/akhrchars.html
+++ b/akhrchars.html
@@ -478,7 +478,7 @@
                                                 <div style="padding: 15px;">
                                                     
                                                     <img id="op-classImage" class="ak-shadow" src="" style="width: 100%;">
-                                                    <div id="op-className"  class="ak-shadow" style="color:#ddd;text-align:center;margin:-4px;margin-top:0px;background:#222;padding:2px;font-size:12px;border-radius:2px"></div>
+                                                    <div id="op-className"  class="ak-shadow" style="color:#ddd;text-align:center;margin:-4px;margin-top:0px;background:#222;padding:2px;font-size:0.9em;font-weight:600;border-radius:2px"></div>
                                                 </div>
                                             </div>
                                         </div>
