some more font adjustments

--- a/akhrchars.html
+++ b/akhrchars.html
@@ -474,10 +474,10 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                            <div class="topright">
-                                                <div style="padding: 15px;">
+                                            <div class="topright" style="margin-right: 10px;">
+                                                <div style="text-align: center;">
                                                     
-                                                    <img id="op-classImage" class="ak-shadow" src="" style="width: 100%;">
+                                                    <img id="op-classImage" class="ak-shadow" src="" style="width: 70%;">
                                                     <div id="op-className"  class="ak-shadow" style="color:#ddd;text-align:center;margin:-4px;margin-top:0px;background:#222;padding:2px;font-size:0.9em;font-weight:600;border-radius:2px"></div>
                                                 </div>
                                             </div>
