--- a/akevolve.html
+++ b/akevolve.html
@@ -7,13 +7,13 @@
     <meta name="theme-color" content="#222222ff">
     <title>Arknights Material Inventory</title>
     <link rel="manifest" href="./manifest.json" crossorigin="use-credentials">
-    <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css'>
+    <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap@4.2.1/dist/css/bootstrap.min.css'>
     <link rel="stylesheet" href="css/ak.css">
     <script src="js/multilingual.js"></script>
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <script src='https://cdn.jsdelivr.net/npm/jquery@3.4.1/dist/jquery.min.js'></script>
     <script src='https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js'></script>
-    <script src='https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js'></script>
+    <script src='https://cdn.jsdelivr.net/npm/bootstrap@4.2.1/dist/js/bootstrap.min.js'></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-159317757-1"></script>
     <script>
@@ -24,6 +24,23 @@
     </script>
 </head>
 <body>
+    <div id="loadingOverlay" style="width: 100vw; height: 150%; background-color: rgb(54, 54, 54); position: absolute; z-index: 9999; top:0px;">
+        <div class="d-flex justify-content-center" style="margin-top: 50vh">
+            <div class="spinner-border" role="status" style="border-color: #0098DC; border-right-color: transparent; width: 4rem; height: 4rem;">
+            </div>
+        </div>
+        <div style="width: 100%; text-align: center; color: white; font-family: 'Novecentosanswide Normal', Arial, sans-serif; font-size: 1.2em; margin-top: 13px;">Loading Toolbox</div>
+    </div>
+    <script>
+        $(function(){
+          $('#nav-placeholder').load('nav.html');
+        });
+        $(window).on("load", function () {
+            setTimeout(function () {
+                $("#loadingOverlay").fadeOut(); 
+            }, 1000);
+        });
+    </script>
     <!-- <button class="btn btn-sm btn-primary goToTag" style="position:fixed;bottom:15px ;right: 0px;size:70px 70px;padding: 10px;z-index: 10000" id="to-tag" type="button">^ </button> -->
     <nav id="aknav" class="navbar fixed-top navbar-expand-md navbar-dark bg-dark" style="background-image: linear-gradient(#222222ff 70%,#222222ff , #111111aa );">
             <img src="./img/factions/logo_rhodes.png" width="40" height="40" style="transform:scale(1.2,1.2)translate(-8px,1px)"class="d-inline-block align-top" alt="">
@@ -321,13 +338,13 @@
                             if(srcHtml!=""){
                                 isOnStage = ""
                                 +     '<div class="card-body p-1 ak-c-black" style="padding:0px">'  
-                                +         '<a class="ak-subtitle2">Drop location :</a>'                  
+                                +         '<a class="ak-subtitle2 medium">Drop location :</a>'                  
                                 +         srcHtml.join("<br />")
                                 +     '</div>'
                             }else{
                                 isOnStage = ""
                                 +     '<div class="card-body p-1 ak-c-black" style="padding:0px">'  
-                                +         '<a class="ak-subtitle2">Only Craftable</a>'                  
+                                +         '<a class="ak-subtitle2 medium">Only Craftable</a>'                  
                                 +         srcHtml.join("<br />")
                                 +     '</div>'
                             }
