--- a/akhrchars.html
+++ b/akhrchars.html
@@ -6,7 +6,7 @@
     <meta name='theme-color' content='#222222ff'>
     <title translate-id='web-title'>Arknights Operator Details</title>
     <link rel='manifest' href='./manifest.json' crossorigin='use-credentials'>
-    <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css'>
+    <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap@4.2.1/dist/css/bootstrap.min.css'>
     <link rel='stylesheet' href='css/ak.css'>
     <link rel='stylesheet' href='css/akMaterial.css'>
     <link rel='stylesheet' href='css/akchardetail.css'>
@@ -14,7 +14,7 @@
     <link rel='shortcut icon' type='image/x-icon' href='favicon.ico'>
     <script src='https://cdn.jsdelivr.net/npm/jquery@3.4.1/dist/jquery.min.js'></script>
     <script src='https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js'></script>
-    <script src='https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js'></script>
+    <script src='https://cdn.jsdelivr.net/npm/bootstrap@4.2.1/dist/js/bootstrap.min.js'></script>
     <script src="js/spine-widget.js"></script>
     <script src="js/spine-skeleton-binary.js"></script>
     <!-- site tag (gtag.js) - Google Analytics -->
@@ -26,13 +26,25 @@
         gtag('config', 'UA-159317757-1');
         
     </script>
-    <script>
-            $(function(){
-              $('#nav-placeholder').load('nav.html');
-            });
-     </script>
 </head>
 <body  >
+    <div id="loadingOverlay" style="width: 100vw; height: 150%; background-color: rgb(54, 54, 54); position: absolute; z-index: 9999; top:0px;">
+        <div class="d-flex justify-content-center" style="margin-top: 50vh">
+            <div class="spinner-border" role="status" style="border-color: #0098DC; border-right-color: transparent; width: 4rem; height: 4rem;">
+            </div>
+        </div>
+        <div style="width: 100%; text-align: center; color: white; font-family: 'Novecentosanswide Normal', Arial, sans-serif; font-size: 1.2em; margin-top: 13px;">Loading Toolbox</div>
+    </div>
+    <script>
+        $(function(){
+          $('#nav-placeholder').load('nav.html');
+        });
+        $(window).on("load", function () {
+            setTimeout(function () {
+                $("#loadingOverlay").fadeOut(); 
+            }, 1000);
+        });
+    </script>
     <!-- style=' background-image: url(./img/extra/bg1.png)' -->
     <button class='btn btn-sm btn-primary goToTag' style='position:fixed;bottom:15px ;right: 0px;size:70px 70px;padding: 10px;z-index: 10000' id='to-tag' type='button'>^ </button>
     <nav id="aknav" class="navbar fixed-top navbar-expand-md navbar-dark bg-dark" style="background-image: linear-gradient(#222222ff 70%,#222222ff , #111111aa );">
