styling adjust for navigation and loading
slightly downward on the nav text and bigger button on menu

make the loading darker ~so you know its already loaded when its brighter~

--- a/akenemy.html
+++ b/akenemy.html
@@ -29,12 +29,14 @@
     </script>
 </head>
 <body  >
-    <div id="loadingOverlay" style="width: 100vw; height: 150%; background-color: rgb(54, 54, 54); position: absolute; z-index: 9999; top:0px;">
+    <div id="loadingOverlay" style="width: 100vw; height: 150%; background-color: #111111; position: absolute; z-index: 9999; top:0px;">
         <div class="d-flex justify-content-center" style="margin-top: 50vh">
             <div class="spinner-border" role="status" style="border-color: #0098DC; border-right-color: transparent; width: 4rem; height: 4rem;">
             </div>
         </div>
-        <div style="width: 100%; text-align: center; color: white; font-family: 'Novecentosanswide Normal', Arial, sans-serif; font-size: 1.2em; margin-top: 13px;">Loading Toolbox</div>
+        <div style="width: 100%; text-align: center; margin-top: 13px;">
+            <div class='loadtext'>Loading Toolbox</div>
+        </div>
     </div>
     <script>
         $(function(){
