--- a/akmatuses.html
+++ b/akmatuses.html
@@ -33,6 +33,8 @@
         </div>
         <div style="width: 100%; text-align: center; margin-top: 13px;">
             <div class='loadtext'>Loading Toolbox</div>
+            <div></div>
+            <div class="loadforce" onclick="hideload()"><a>Click here if stuck on loading</a></div>
         </div>
     </div>
     <script>
